<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id = "@+id/fragment_edit_item">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit_view" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/dateOfPurchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dateofpurchase"
        android:inputType="date"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/make"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/model"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/serial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/serial_number"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/estimated_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estimated_value"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photos"
        android:textSize="18sp"
        android:textStyle="normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="207dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="207dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/editImage1"
                android:layout_width="100dp"
                android:layout_height="207dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

            <ImageButton
                android:id="@+id/editImage2"
                android:layout_width="100dp"
                android:layout_height="207dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

            <ImageButton
                android:id="@+id/editImage3"
                android:layout_width="100dp"
                android:layout_height="207dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="18sp">

        </Button>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textSize="18sp">

        </Button>

    </LinearLayout>

</LinearLayout>
