<resources>
    <string name="app_name">DebuggingDemonsApp</string>
    <string name="title_home">Home</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_camera">Camera</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tag_tab">Tag</string>
    <string name="add_item">Add</string>
    <string name="title_filter">FILTER</string>
    <string name="title_sort">SORT BY</string>
    <string name="title_tag">TAGS</string>
    <string name="title_delete">DELETE</string>
    <string name="title_add">ADD</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="retake_button">Retake Photo</string>
    <string name="save_button">Save Photo</string>
    <string name="edit_view">EDIT</string>
    <string name="description">Description</string>
    <string name="dateofpurchase">Date of Purchase</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="serial_number">Serial Number</string>
    <string name="estimated_value">Estimated Value</string>
    <string name="comment">Comment</string>
    <string name="back">BACK</string>
    <string name="confirm">CONFIRM</string>
    <string name="photos">Photos</string>
    <string name="total_estimated_value_0">Total Estimated Value: $0</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_descrioption">Sort by description</string>
    <string name="sort_by_make">Sort by make</string>
    <string name="sort_by_value">Sort by value</string>
    <string name="sort_by_tag">Sort by tag</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="scan_button">Scan</string>
    <string name="update_tags_button_text">Update Tags</string>
</resources>